--- a/doc/agile/sprint_backlog_94.org
+++ b/doc/agile/sprint_backlog_94.org
@@ -12,29 +12,29 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-12-20 Tue 10:06]
+#+CAPTION: Clock summary at [2016-12-20 Tue 10:21]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *45:30* |       |       | 100.0 |
+| *Total time*                                                                | *45:44* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 45:30   |       |       | 100.0 |
-| Active                                                                      |         | 45:30 |       | 100.0 |
+| Stories                                                                     | 45:44   |       |       | 100.0 |
+| Active                                                                      |         | 45:44 |       | 100.0 |
 | STARTED Sprint and product backlog grooming                                 |         |       |  1:03 |   2.3 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  0:31 |   1.1 |
-| COMPLETED Add helper infrastructure to C#                                   |         |       |  5:55 |  13.0 |
+| COMPLETED Add helper infrastructure to C#                                   |         |       |  5:55 |  12.9 |
 | COMPLETED Add support for Equals in C#                                      |         |       |  1:24 |   3.1 |
 | COMPLETED Create a test model solution to validate C# code                  |         |       |  3:47 |   8.3 |
-| COMPLETED Add basic io support to C#                                        |         |       | 11:56 |  26.2 |
+| COMPLETED Add basic io support to C#                                        |         |       | 11:56 |  26.1 |
 | COMPLETED Add basic test data generation support to C#                      |         |       |  0:41 |   1.5 |
 | COMPLETED Add io and equality canned unit tests to C# model                 |         |       |  3:55 |   8.6 |
-| COMPLETED Update C# stitch templates to match code                          |         |       |  7:28 |  16.4 |
+| COMPLETED Update C# stitch templates to match code                          |         |       |  7:28 |  16.3 |
 | COMPLETED Move enumeration population to yarn                               |         |       |  0:43 |   1.6 |
 | COMPLETED Add support for types in packages in C#                           |         |       |  0:18 |   0.7 |
-| COMPLETED Add support for enumerations in C#                                |         |       |  1:48 |   4.0 |
+| COMPLETED Add support for enumerations in C#                                |         |       |  1:48 |   3.9 |
 | COMPLETED Add support for exceptions in C#                                  |         |       |  0:14 |   0.5 |
 | COMPLETED Add support for associations in C#                                |         |       |  3:14 |   7.1 |
-| STARTED Add support for inheritance in C#                                   |         |       |  2:30 |   5.5 |
+| STARTED Add support for inheritance in C#                                   |         |       |  2:44 |   6.0 |
 | STARTED Add complete constructor for C# types                               |         |       |  0:03 |   0.1 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
@@ -524,6 +524,7 @@ any kernel and sub-kernel. We should rename it and move it to output
 options.
 
 *** STARTED Add support for inheritance in C#                         :story:
+    CLOCK: [2016-12-20 Tue 10:07]--[2016-12-20 Tue 10:21] =>  0:14
     CLOCK: [2016-12-20 Tue 10:00]--[2016-12-20 Tue 10:06] =>  0:06
     CLOCK: [2016-12-20 Tue 09:05]--[2016-12-20 Tue 09:59] =>  0:54
     CLOCK: [2016-12-19 Mon 21:09]--[2016-12-19 Mon 21:55] =>  0:46
