--- a/doc/agile/sprint_backlog_94.org
+++ b/doc/agile/sprint_backlog_94.org
@@ -12,31 +12,32 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-12-23 Fri 14:15]
+#+CAPTION: Clock summary at [2016-12-23 Fri 14:29]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *51:42* |       |       | 100.0 |
+| *Total time*                                                                | *51:55* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 51:42   |       |       | 100.0 |
-| Active                                                                      |         | 51:42 |       | 100.0 |
+| Stories                                                                     | 51:55   |       |       | 100.0 |
+| Active                                                                      |         | 51:55 |       | 100.0 |
 | STARTED Sprint and product backlog grooming                                 |         |       |  1:09 |   2.2 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  0:31 |   1.0 |
 | COMPLETED Add helper infrastructure to C#                                   |         |       |  5:55 |  11.4 |
 | COMPLETED Add support for Equals in C#                                      |         |       |  1:24 |   2.7 |
 | COMPLETED Create a test model solution to validate C# code                  |         |       |  3:47 |   7.3 |
-| COMPLETED Add basic io support to C#                                        |         |       | 11:56 |  23.1 |
+| COMPLETED Add basic io support to C#                                        |         |       | 11:56 |  23.0 |
 | COMPLETED Add basic test data generation support to C#                      |         |       |  0:41 |   1.3 |
-| COMPLETED Add io and equality canned unit tests to C# model                 |         |       |  3:55 |   7.6 |
+| COMPLETED Add io and equality canned unit tests to C# model                 |         |       |  3:55 |   7.5 |
 | COMPLETED Update C# stitch templates to match code                          |         |       |  7:28 |  14.4 |
 | COMPLETED Move enumeration population to yarn                               |         |       |  0:43 |   1.4 |
 | COMPLETED Add support for types in packages in C#                           |         |       |  0:18 |   0.6 |
 | COMPLETED Add support for enumerations in C#                                |         |       |  1:48 |   3.5 |
-| COMPLETED Add support for exceptions in C#                                  |         |       |  0:14 |   0.5 |
-| COMPLETED Add support for associations in C#                                |         |       |  3:14 |   6.3 |
-| COMPLETED Add support for inheritance in C#                                 |         |       |  6:21 |  12.3 |
+| COMPLETED Add support for exceptions in C#                                  |         |       |  0:14 |   0.4 |
+| COMPLETED Add support for associations in C#                                |         |       |  3:14 |   6.2 |
+| COMPLETED Add support for inheritance in C#                                 |         |       |  6:21 |  12.2 |
 | COMPLETED Consider changing inherited attributes to a list                  |         |       |  0:34 |   1.1 |
-| COMPLETED Add complete constructor for C# types                             |         |       |  1:44 |   3.4 |
+| COMPLETED Add complete constructor for C# types                             |         |       |  1:44 |   3.3 |
+| COMPLETED Add immutability support for C# types                             |         |       |  0:13 |   0.4 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -597,10 +598,16 @@ Links:
 - [[http://stackoverflow.com/questions/267724/why-xml-serializable-class-need-a-parameterless-constructor][Why XML-Serializable class need a parameterless constructor]]
 - [[http://stackoverflow.com/questions/12051/calling-the-base-constructor-in-c-sharp][Calling the base constructor in C#]]
 
-*** Add immutability support for C# types                             :story:
+*** COMPLETED Add immutability support for C# types                   :story:
+    CLOSED: [2016-12-23 Fri 14:29]
+    CLOCK: [2016-12-23 Fri 14:16]--[2016-12-23 Fri 14:29] =>  0:13
 
 We need to implement immutability. This can only be done after
 complete constructor.
+
+*** Add handcrafted class to C# test model                            :story:
+
+We should make sure handcrafted code works in C#.
 
 *** Add fluency support for C#                                        :story:
 
