--- a/doc/agile/sprint_backlog_95.org
+++ b/doc/agile/sprint_backlog_95.org
@@ -12,37 +12,37 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-01-12 Thu 11:01]
+#+CAPTION: Clock summary at [2017-01-12 Thu 12:28]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *64:26* |       |      | 100.0 |
+| *Total time*                                                                | *65:50* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 64:26   |       |      | 100.0 |
-| Active                                                                      |         | 64:26 |      | 100.0 |
+| Stories                                                                     | 65:50   |       |      | 100.0 |
+| Active                                                                      |         | 65:50 |      | 100.0 |
 | STARTED Sprint and product backlog grooming                                 |         |       | 0:35 |   0.9 |
-| COMPLETED Edit release notes for previous sprint                            |         |       | 0:57 |   1.5 |
-| COMPLETED Consider supporting multiple inheritance on non-proxy models      |         |       | 3:24 |   5.3 |
-| COMPLETED Add basic validation infrastructure                               |         |       | 8:40 |  13.5 |
+| COMPLETED Edit release notes for previous sprint                            |         |       | 0:57 |   1.4 |
+| COMPLETED Consider supporting multiple inheritance on non-proxy models      |         |       | 3:24 |   5.2 |
+| COMPLETED Add basic validation infrastructure                               |         |       | 8:40 |  13.2 |
 | COMPLETED Fix borked windows build                                          |         |       | 0:26 |   0.7 |
-| COMPLETED Clean up enumerator implementation                                |         |       | 1:05 |   1.7 |
-| COMPLETED Measure validation slowdown                                       |         |       | 6:38 |  10.3 |
-| COMPLETED Parsing should support dot notation                               |         |       | 2:54 |   4.5 |
-| COMPLETED Analysis for changes required in order to support containers      |         |       | 3:15 |   5.0 |
-| COMPLETED Add support for object based container types in C#                |         |       | 5:48 |   9.0 |
-| COMPLETED Understand the behaviour of helpers and assistants                |         |       | 1:13 |   1.9 |
+| COMPLETED Clean up enumerator implementation                                |         |       | 1:05 |   1.6 |
+| COMPLETED Measure validation slowdown                                       |         |       | 6:38 |  10.1 |
+| COMPLETED Parsing should support dot notation                               |         |       | 2:54 |   4.4 |
+| COMPLETED Analysis for changes required in order to support containers      |         |       | 3:15 |   4.9 |
+| COMPLETED Add support for object based container types in C#                |         |       | 5:48 |   8.8 |
+| COMPLETED Understand the behaviour of helpers and assistants                |         |       | 1:13 |   1.8 |
 | CANCELLED Add support for generic parents in yarn                           |         |       | 0:35 |   0.9 |
 | COMPLETED Fix assorted windows warnings                                     |         |       | 0:19 |   0.5 |
-| COMPLETED Build dogen on windows locally                                    |         |       | 7:32 |  11.7 |
+| COMPLETED Build dogen on windows locally                                    |         |       | 7:32 |  11.4 |
 | COMPLETED Fix borked windows build                                          |         |       | 1:54 |   2.9 |
-| COMPLETED Generate windows packages with WIX                                |         |       | 3:28 |   5.4 |
-| COMPLETED Add validation around instatitation of abstract classes           |         |       | 2:25 |   3.8 |
+| COMPLETED Generate windows packages with WIX                                |         |       | 3:28 |   5.3 |
+| COMPLETED Add validation around instatitation of abstract classes           |         |       | 2:25 |   3.7 |
 | COMPLETED Add validation to ensure enumerators do not have types            |         |       | 0:21 |   0.5 |
-| STARTED Add appveyor support for bintray                                    |         |       | 1:48 |   2.8 |
-| STARTED Add upsilon support                                                 |         |       | 3:51 |   6.0 |
+| COMPLETED Add appveyor support for bintray                                  |         |       | 2:23 |   3.6 |
+| STARTED Add upsilon support                                                 |         |       | 4:40 |   7.1 |
 | STARTED Add auxiliary function properties to c#                             |         |       | 1:11 |   1.8 |
-| STARTED Add internal object dumper resolution                               |         |       | 4:51 |   7.5 |
-| STARTED Add support for generic container types to C#                       |         |       | 1:16 |   2.0 |
+| STARTED Add internal object dumper resolution                               |         |       | 4:51 |   7.4 |
+| STARTED Add support for generic container types to C#                       |         |       | 1:16 |   1.9 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -876,7 +876,9 @@ In =upsilon= we set an object's type to enumeration by mistake. It
 resulted in an enumeration. The error should have been picked up by
 noticing the enumerators had a type. Add a validation error for this.
 
-*** STARTED Add appveyor support for bintray                          :story:
+*** COMPLETED Add appveyor support for bintray                        :story:
+    CLOSED: [2017-01-12 Thu 11:38]
+    CLOCK: [2017-01-12 Thu 11:18]--[2017-01-12 Thu 11:38] =>  0:20
     CLOCK: [2017-01-12 Thu 11:02]--[2017-01-12 Thu 11:17] =>  0:15
     CLOCK: [2017-01-12 Thu 09:10]--[2017-01-12 Thu 09:43] =>  0:33
     CLOCK: [2017-01-11 Wed 22:10]--[2017-01-11 Wed 22:25] =>  0:15
@@ -914,6 +916,7 @@ Errors:
 : Uploading "dogen-0.95.0-Windows-AMD64.msi" to BinTray as domaindrivenconsulting/Dogen/Dogen/0.94.0/dogen-0.95.0-Windows-AMD64.msi...Error uploading artifact to BinTray (401 status): This resource requires authentication
 
 *** STARTED Add upsilon support                                       :story:
+    CLOCK: [2017-01-12 Thu 11:39]--[2017-01-12 Thu 12:28] =>  0:49
     CLOCK: [2017-01-12 Thu 10:22]--[2017-01-12 Thu 11:01] =>  0:39
     CLOCK: [2017-01-12 Thu 10:17]--[2017-01-12 Thu 10:21] =>  0:04
     CLOCK: [2017-01-12 Thu 10:05]--[2017-01-12 Thu 10:16] =>  0:11
@@ -1013,6 +1016,17 @@ Notes:
 
 - we need a way to determine if we are using a helper, the assistant
   or a sequence generator directly.
+
+*** Fix issues with bintray windows uploads                           :story:
+
+At present we are doing a lot of hacks for windows:
+
+- hardcoding the path to the package
+- not uploading on just tags
+- uploading to the top-level folder instead of the version.
+
+Ideally we want to reuse the Travis BinTray descriptor but AppVeyor
+does not support this directly.
 
 *** Model references are not transitive                               :story:
 
