--- a/doc/agile/sprint_backlog_95.org
+++ b/doc/agile/sprint_backlog_95.org
@@ -12,21 +12,21 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-01-12 Thu 12:28]
+#+CAPTION: Clock summary at [2017-01-12 Thu 12:49]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *65:50* |       |      | 100.0 |
+| *Total time*                                                                | *66:10* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 65:50   |       |      | 100.0 |
-| Active                                                                      |         | 65:50 |      | 100.0 |
+| Stories                                                                     | 66:10   |       |      | 100.0 |
+| Active                                                                      |         | 66:10 |      | 100.0 |
 | STARTED Sprint and product backlog grooming                                 |         |       | 0:35 |   0.9 |
 | COMPLETED Edit release notes for previous sprint                            |         |       | 0:57 |   1.4 |
-| COMPLETED Consider supporting multiple inheritance on non-proxy models      |         |       | 3:24 |   5.2 |
-| COMPLETED Add basic validation infrastructure                               |         |       | 8:40 |  13.2 |
+| COMPLETED Consider supporting multiple inheritance on non-proxy models      |         |       | 3:24 |   5.1 |
+| COMPLETED Add basic validation infrastructure                               |         |       | 8:40 |  13.1 |
 | COMPLETED Fix borked windows build                                          |         |       | 0:26 |   0.7 |
 | COMPLETED Clean up enumerator implementation                                |         |       | 1:05 |   1.6 |
-| COMPLETED Measure validation slowdown                                       |         |       | 6:38 |  10.1 |
+| COMPLETED Measure validation slowdown                                       |         |       | 6:38 |  10.0 |
 | COMPLETED Parsing should support dot notation                               |         |       | 2:54 |   4.4 |
 | COMPLETED Analysis for changes required in order to support containers      |         |       | 3:15 |   4.9 |
 | COMPLETED Add support for object based container types in C#                |         |       | 5:48 |   8.8 |
@@ -35,13 +35,13 @@
 | COMPLETED Fix assorted windows warnings                                     |         |       | 0:19 |   0.5 |
 | COMPLETED Build dogen on windows locally                                    |         |       | 7:32 |  11.4 |
 | COMPLETED Fix borked windows build                                          |         |       | 1:54 |   2.9 |
-| COMPLETED Generate windows packages with WIX                                |         |       | 3:28 |   5.3 |
+| COMPLETED Generate windows packages with WIX                                |         |       | 3:28 |   5.2 |
 | COMPLETED Add validation around instatitation of abstract classes           |         |       | 2:25 |   3.7 |
 | COMPLETED Add validation to ensure enumerators do not have types            |         |       | 0:21 |   0.5 |
 | COMPLETED Add appveyor support for bintray                                  |         |       | 2:23 |   3.6 |
-| STARTED Add upsilon support                                                 |         |       | 4:40 |   7.1 |
+| STARTED Add upsilon support                                                 |         |       | 5:00 |   7.6 |
 | STARTED Add auxiliary function properties to c#                             |         |       | 1:11 |   1.8 |
-| STARTED Add internal object dumper resolution                               |         |       | 4:51 |   7.4 |
+| STARTED Add internal object dumper resolution                               |         |       | 4:51 |   7.3 |
 | STARTED Add support for generic container types to C#                       |         |       | 1:16 |   1.9 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
@@ -916,6 +916,7 @@ Errors:
 : Uploading "dogen-0.95.0-Windows-AMD64.msi" to BinTray as domaindrivenconsulting/Dogen/Dogen/0.94.0/dogen-0.95.0-Windows-AMD64.msi...Error uploading artifact to BinTray (401 status): This resource requires authentication
 
 *** STARTED Add upsilon support                                       :story:
+    CLOCK: [2017-01-12 Thu 12:29]--[2017-01-12 Thu 12:49] =>  0:20
     CLOCK: [2017-01-12 Thu 11:39]--[2017-01-12 Thu 12:28] =>  0:49
     CLOCK: [2017-01-12 Thu 10:22]--[2017-01-12 Thu 11:01] =>  0:39
     CLOCK: [2017-01-12 Thu 10:17]--[2017-01-12 Thu 10:21] =>  0:04
