--- a/doc/agile/sprint_backlog_95.org
+++ b/doc/agile/sprint_backlog_95.org
@@ -12,14 +12,14 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-01-12 Thu 14:43]
+#+CAPTION: Clock summary at [2017-01-12 Thu 14:49]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *66:49* |       |      | 100.0 |
+| *Total time*                                                                | *66:53* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 66:49   |       |      | 100.0 |
-| Active                                                                      |         | 66:49 |      | 100.0 |
+| Stories                                                                     | 66:53   |       |      | 100.0 |
+| Active                                                                      |         | 66:53 |      | 100.0 |
 | STARTED Sprint and product backlog grooming                                 |         |       | 0:35 |   0.9 |
 | COMPLETED Edit release notes for previous sprint                            |         |       | 0:57 |   1.4 |
 | COMPLETED Consider supporting multiple inheritance on non-proxy models      |         |       | 3:24 |   5.1 |
@@ -39,7 +39,7 @@
 | COMPLETED Add validation around instatitation of abstract classes           |         |       | 2:25 |   3.6 |
 | COMPLETED Add validation to ensure enumerators do not have types            |         |       | 0:21 |   0.5 |
 | COMPLETED Add appveyor support for bintray                                  |         |       | 2:23 |   3.6 |
-| STARTED Add upsilon support                                                 |         |       | 5:39 |   8.5 |
+| STARTED Add upsilon support                                                 |         |       | 5:43 |   8.5 |
 | STARTED Add auxiliary function properties to c#                             |         |       | 1:11 |   1.8 |
 | STARTED Add internal object dumper resolution                               |         |       | 4:51 |   7.3 |
 | STARTED Add support for generic container types to C#                       |         |       | 1:16 |   1.9 |
@@ -916,6 +916,7 @@ Errors:
 : Uploading "dogen-0.95.0-Windows-AMD64.msi" to BinTray as domaindrivenconsulting/Dogen/Dogen/0.94.0/dogen-0.95.0-Windows-AMD64.msi...Error uploading artifact to BinTray (401 status): This resource requires authentication
 
 *** STARTED Add upsilon support                                       :story:
+    CLOCK: [2017-01-12 Thu 14:44]--[2017-01-12 Thu 14:48] =>  0:04
     CLOCK: [2017-01-12 Thu 14:33]--[2017-01-12 Thu 14:43] =>  0:10
     CLOCK: [2017-01-12 Thu 14:30]--[2017-01-12 Thu 14:32] =>  0:02
     CLOCK: [2017-01-12 Thu 14:02]--[2017-01-12 Thu 14:29] =>  0:27
